--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - export PATH="$HOME/miniconda/bin:$PATH"
 - conda update --yes conda
 install:
-- conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib
+- conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib
 - pip install -r requirements_travis.txt
 - pip install coveralls
 script:
