--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-numpy==1.10.4
-matplotlib==1.5.1
-geojson==1.3.2
+setuptools==32.2.0
+geojson==1.3.4
+matplotlib==2.0.0
+numpy==1.12.1
+pypandoc==1.3.3
