update dependencies and simply travis-ci build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,11 @@ addons:
     - libblas-dev
     - liblapack-dev
     - gfortran
-before_install:
-- wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-- bash miniconda.sh -b -p $HOME/miniconda
-- export PATH="$HOME/miniconda/bin:$PATH"
-- conda update --yes conda
 install:
-- conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib
-- pip install -r requirements_travis.txt
+- pip install -r requirements.txt
 - pip install coveralls
 script:
-- python setup.py nosetests
+- python -m unittest discover
 notifications:
   email: false
 after_success:
