--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
 - '3.7'
 install:
 - pip install -r requirements.txt
-- pip install coveralls
+- pip install coverage coveralls
 script:
-- python -m unittest discover
+- coverage run -m unittest discover
 notifications:
   email: false
 after_success:
